<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view_drawer"
        android:layout_width="100dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="24dp"
        android:layout_height="4dp"
        android:background="@drawable/top_round_bg_with_opacity"
        android:backgroundTint="@color/black25op"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="48dp">

        <TextView
            style="@style/SubtitleM"
            android:id="@+id/tv_details_drawer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_drawer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_name_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/round_image_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_name_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_name_image"
            app:tint="@color/background_dark" />

        <TextView
            android:id="@+id/tv_name_image"
            style="@style/labelM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toEndOf="@id/iv_name_image"
            app:layout_constraintTop_toBottomOf="@id/tv_details_drawer"
            tools:text="Nombre del archivo" />

        <TextView
            android:id="@+id/tv_name_image_description"
            style="@style/BodyXS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/name_image_description"
            app:layout_constraintStart_toStartOf="@+id/tv_name_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_image" />

        <ImageView
            android:id="@+id/iv_weight_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_data_usage_24"
            app:layout_constraintBottom_toBottomOf="@+id/tv_weight_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_weight_image"
            app:tint="@color/background_dark" />

        <TextView
            android:id="@+id/tv_weight_image"
            style="@style/labelM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            app:layout_constraintStart_toEndOf="@id/iv_weight_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_image_description"
            tools:text="Peso del archivo" />

        <TextView
            android:id="@+id/tv_weight_image_description"
            style="@style/BodyXS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/weight_image_description"
            app:layout_constraintStart_toStartOf="@+id/tv_name_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight_image" />

        <ImageView
            android:id="@+id/iv_date_image"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_date_range_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_date_image"
            app:tint="@color/background_dark" />

        <TextView
            android:id="@+id/tv_date_image"
            style="@style/labelM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintStart_toEndOf="@id/iv_date_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_weight_image_description"
            tools:text="Fecha" />

        <TextView
            android:id="@+id/tv_date_image_description"
            style="@style/BodyXS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_image_description"
            app:layout_constraintStart_toStartOf="@+id/tv_name_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>